# rustree

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: manual.rtd
src/: event_loop.rs  history_manager.rs  main.rs  settings.rs  types.rs  utils.rs
src/app/: document.rs  mod.rs  resources.rs  text_processor.rs
src/formats/: html.rs  mod.rs  rtd.rs
src/ui/: mod.rs  uifile.fl
